[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek_vl"
version = "1.0.0"
description = "DeepSeek-VL"
authors = [{name = "DeepSeek-AI"}]
license = {file = "LICENSE-CODE"}
urls = {homepage = "https://github.com/deepseek-ai/DeepSeek-VL"}
readme = "README.md"
requires-python = ">=3.8, <3.10"
dependencies = [
    "torch>=2.0.1",
    "transformers>=4.38.2",
    "timm>=0.9.16",
    "accelerate",
    "sentencepiece",
    "attrdict",
    "einops",
]

[project.optional-dependencies]
gradio = [
    "gradio==3.48.0",
    "gradio-client==0.6.1",
    "mdtex2html==1.3.0",
    "pypinyin==0.50.0",
    "tiktoken==0.5.2",
    "tqdm==4.64.0",
    "colorama==0.4.5",
    "Pygments==2.12.0",
    "markdown==3.4.1",
    "SentencePiece==0.1.96"
]

[tool.setuptools]
packages = {find = {exclude = ["images"]}}
